Seed data and pluming

--- a/MobileLab3_APIHost/appsettings.json
+++ b/MobileLab3_APIHost/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MobileLab3_APIHost-febca48e-fae6-4500-a25a-dcf13214c7b3;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "ApplicationDbContext": "Server=(localdb)\\mssqllocaldb;Database=MobileLab3_APIHost-febca48e-fae6-4500-a25a-dcf13214c7b3;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
